target/generated-sources/antlr4/iakbari/ruletranslator/parsers/RIFBLDParser.java
// Generated from RIFBLD.g4 by ANTLR 4.4

	package iakbari.ruletranslator.parsers;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RIFBLDParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__23=1, T__22=2, T__21=3, T__20=4, T__19=5, T__18=6, T__17=7, T__16=8, 
		T__15=9, T__14=10, T__13=11, T__12=12, T__11=13, T__10=14, T__9=15, T__8=16, 
		T__7=17, T__6=18, T__5=19, T__4=20, T__3=21, T__2=22, T__1=23, T__0=24, 
		Var=25, IRICONST=26, UNICODE=27, UNICODESTRING=28, ANGLEBRACKIRI=29, NCName=30, 
		CURIE=31, NumericLiteral=32, WS=33;
	public static final String[] tokenNames = {
		"<INVALID>", "':-'", "'->'", "'Exists'", "'Group'", "'Document'", "'^^'", 
		"'['", "'*)'", "'And'", "'Base'", "'|'", "'##'", "']'", "'='", "'List'", 
		"'Or'", "'(*'", "'#'", "'Forall'", "'Import'", "'Prefix'", "'('", "')'", 
		"'External'", "Var", "IRICONST", "UNICODE", "UNICODESTRING", "ANGLEBRACKIRI", 
		"NCName", "CURIE", "NumericLiteral", "WS"
	};
	public static final int
		RULE_r = 0, RULE_document = 1, RULE_base = 2, RULE_prefix = 3, RULE_import1 = 4, 
		RULE_angle = 5, RULE_group = 6, RULE_rule1 = 7, RULE_clause = 8, RULE_implies = 9, 
		RULE_formula = 10, RULE_atomic = 11, RULE_equal = 12, RULE_member = 13, 
		RULE_subclass = 14, RULE_irimeta = 15, RULE_frame = 16, RULE_term = 17, 
		RULE_list = 18, RULE_uniterm = 19, RULE_const1 = 20, RULE_constshort = 21, 
		RULE_symspace = 22;
	public static final String[] ruleNames = {
		"r", "document", "base", "prefix", "import1", "angle", "group", "rule1", 
		"clause", "implies", "formula", "atomic", "equal", "member", "subclass", 
		"irimeta", "frame", "term", "list", "uniterm", "const1", "constshort", 
		"symspace"
	};

	@Override
	public String getGrammarFileName() { return "RIFBLD.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RIFBLDParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(RIFBLDParser.EOF, 0); }
		public DocumentContext document() {
			return getRuleContext(DocumentContext.class,0);
		}
		public RContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RIFBLDListener ) ((RIFBLDListener)listener).enterR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RIFBLDListener ) ((RIFBLDListener)listener).exitR(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RIFBLDVisitor ) return ((RIFBLDVisitor<? extends T>)visitor).visitR(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RContext r() throws RecognitionException {
		RContext _localctx = new RContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_r);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46); document();
			setState(47); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DocumentContext extends ParserRuleContext {
		public BaseContext base() {
			return getRuleContext(BaseContext.class,0);
		}
		public PrefixContext prefix(int i) {
			return getRuleContext(PrefixContext.class,i);
		}
		public List<Import1Context> import1() {
			return getRuleContexts(Import1Context.class);
		}
		public Import1Context import1(int i) {
			return getRuleContext(Import1Context.class,i);
		}
		public GroupContext group() {
			return getRuleContext(GroupContext.class,0);
		}
		public List<PrefixContext> prefix() {
			return getRuleContexts(PrefixContext.class);
		}
		public IrimetaContext irimeta() {
			return getRuleContext(IrimetaContext.class,0);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RIFBLDListener ) ((RIFBLDListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RIFBLDListener ) ((RIFBLDListener)listener).exitDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RIFBLDVisitor ) return ((RIFBLDVisitor<? extends T>)visitor).visitDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_document);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(49); irimeta();
				}
			}

			setState(52); match(T__19);
			setState(53); match(T__2);
			setState(55);
			_la = _input.LA(1);
			if (_la==T__14) {
				{
				setState(54); base();
				}
			}

			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(57); prefix();
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(66);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(63); import1();
					}
					} 
				}
				setState(68);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(70);
			_la = _input.LA(1);
			if (_la==T__20 || _la==T__7) {
				{
				setState(69); group();
				}
			}

			setState(72); match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BaseContext extends ParserRuleContext {
		public TerminalNode ANGLEBRACKIRI() { return getToken(RIFBLDParser.ANGLEBRACKIRI, 0); }
		public BaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_base; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RIFBLDListener ) ((RIFBLDListener)listener).enterBase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RIFBLDListener ) ((RIFBLDListener)listener).exitBase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RIFBLDVisitor ) return ((RIFBLDVisitor<? extends T>)visitor).visitBase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BaseContext base() throws RecognitionException {
		BaseContext _localctx = new BaseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_base);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74); match(T__14);
			setState(75); match(T__2);
			setState(76); match(ANGLEBRACKIRI);
			setState(77); match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrefixContext extends ParserRuleContext {
		public TerminalNode NCName() { return getToken(RIFBLDParser.NCName, 0); }
		public TerminalNode ANGLEBRACKIRI() { return getToken(RIFBLDParser.ANGLEBRACKIRI, 0); }
		public PrefixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prefix; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RIFBLDListener ) ((RIFBLDListener)listener).enterPrefix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RIFBLDListener ) ((RIFBLDListener)listener).exitPrefix(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RIFBLDVisitor ) return ((RIFBLDVisitor<? extends T>)visitor).visitPrefix(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrefixContext prefix() throws RecognitionException {
		PrefixContext _localctx = new PrefixContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_prefix);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79); match(T__3);
			setState(80); match(T__2);
			setState(81); match(NCName);
			setState(82); match(ANGLEBRACKIRI);
			setState(83); match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import1Context extends ParserRuleContext {
		public List<AngleContext> angle() {
			return getRuleContexts(AngleContext.class);
		}
		public AngleContext angle(int i) {
			return getRuleContext(AngleContext.class,i);
		}
		public IrimetaContext irimeta() {
			return getRuleContext(IrimetaContext.class,0);
		}
		public Import1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RIFBLDListener ) ((RIFBLDListener)listener).enterImport1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RIFBLDListener ) ((RIFBLDListener)listener).exitImport1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RIFBLDVisitor ) return ((RIFBLDVisitor<? extends T>)visitor).visitImport1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Import1Context import1() throws RecognitionException {
		Import1Context _localctx = new Import1Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_import1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(85); irimeta();
				}
			}

			setState(88); match(T__4);
			setState(89); match(T__2);
			setState(90); angle();
			setState(92);
			_la = _input.LA(1);
			if (_la==ANGLEBRACKIRI) {
				{
				setState(91); angle();
				}
			}

			setState(94); match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AngleContext extends ParserRuleContext {
		public TerminalNode ANGLEBRACKIRI() { return getToken(RIFBLDParser.ANGLEBRACKIRI, 0); }
		public AngleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_angle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RIFBLDListener ) ((RIFBLDListener)listener).enterAngle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RIFBLDListener ) ((RIFBLDListener)listener).exitAngle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RIFBLDVisitor ) return ((RIFBLDVisitor<? extends T>)visitor).visitAngle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AngleContext angle() throws RecognitionException {
		AngleContext _localctx = new AngleContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_angle);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96); match(ANGLEBRACKIRI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GroupContext extends ParserRuleContext {
		public List<GroupContext> group() {
			return getRuleContexts(GroupContext.class);
		}
		public GroupContext group(int i) {
			return getRuleContext(GroupContext.class,i);
		}
		public Rule1Context rule1(int i) {
			return getRuleContext(Rule1Context.class,i);
		}
		public IrimetaContext irimeta() {
			return getRuleContext(IrimetaContext.class,0);
		}
		public List<Rule1Context> rule1() {
			return getRuleContexts(Rule1Context.class);
		}
		public GroupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_group; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RIFBLDListener ) ((RIFBLDListener)listener).enterGroup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RIFBLDListener ) ((RIFBLDListener)listener).exitGroup(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RIFBLDVisitor ) return ((RIFBLDVisitor<? extends T>)visitor).visitGroup(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GroupContext group() throws RecognitionException {
		GroupContext _localctx = new GroupContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_group);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(98); irimeta();
				}
			}

			setState(101); match(T__20);
			setState(102); match(T__2);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__20) | (1L << T__15) | (1L << T__9) | (1L << T__7) | (1L << T__5) | (1L << T__0) | (1L << Var) | (1L << IRICONST) | (1L << UNICODE) | (1L << UNICODESTRING) | (1L << ANGLEBRACKIRI) | (1L << NCName) | (1L << CURIE) | (1L << NumericLiteral))) != 0)) {
				{
				setState(105);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(103); rule1();
					}
					break;
				case 2:
					{
					setState(104); group();
					}
					break;
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110); match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rule1Context extends ParserRuleContext {
		public Rule1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rule1; }
	 
		public Rule1Context() { }
		public void copyFrom(Rule1Context ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FactContext extends Rule1Context {
		public ClauseContext clause() {
			return getRuleContext(ClauseContext.class,0);
		}
		public FactContext(Rule1Context ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RIFBLDListener ) ((RIFBLDListener)listener).enterFact(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RIFBLDListener ) ((RIFBLDListener)listener).exitFact(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RIFBLDVisitor ) return ((RIFBLDVisitor<? extends T>)visitor).visitFact(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ForallContext extends Rule1Context {
		public TerminalNode Var(int i) {
			return getToken(RIFBLDParser.Var, i);
		}
		public ClauseContext clause() {
			return getRuleContext(ClauseContext.class,0);
		}
		public List<TerminalNode> Var() { return getTokens(RIFBLDParser.Var); }
		public IrimetaContext irimeta() {
			return getRuleContext(IrimetaContext.class,0);
		}
		public ForallContext(Rule1Context ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RIFBLDListener ) ((RIFBLDListener)listener).enterForall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RIFBLDListener ) ((RIFBLDListener)listener).exitForall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RIFBLDVisitor ) return ((RIFBLDVisitor<? extends T>)visitor).visitForall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Rule1Context rule1() throws RecognitionException {
		Rule1Context _localctx = new Rule1Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_rule1);
		int _la;
		try {
			setState(126);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				_localctx = new ForallContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(113);
				_la = _input.LA(1);
				if (_la==T__7) {
					{
					setState(112); irimeta();
					}
				}

				setState(115); match(T__5);
				setState(117); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(116); match(Var);
					}
					}
					setState(119); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==Var );
				setState(121); match(T__2);
				setState(122); clause();
				setState(123); match(T__1);
				}
				}
				break;
			case 2:
				_localctx = new FactContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(125); clause();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
